--- a/index.html
+++ b/index.html
@@ -66,14 +66,24 @@
                 <p>Atendemos com agilidade, preço justo e limpeza garantida.</p>
             </div>
             <a href="#" class="btn-hero pulse ">
-                <img src="./files/images/hero/rolo-botao.svg" alt="Icon de um rolo para o botão da hero">
+                <img src="./files/images/hero/rolo-botao.svg" alt="Icon de um rolo para o botão da hero" class="rolo-botao-hero">
                 SOLICITE SEU ORÇAMENTO GRÁTIS AGORA
             </a>
+            <a href="#" class="btn-hero-mobile pulse ">
+                <img src="./files/images/hero/rolo-botao.svg" alt="Icon de um rolo para o botão da hero" class="rolo-botao-hero">
+                ORÇAMENTO GRÁTIS
+            </a>
+
+
         </div>
         <div class="img-background-hero">
             <img src="./files/images/hero/img-background-hero.png"
                 alt="Imagem de um rolo pintando parede com tinta amarela">
         </div>
+        <div class="img-background-hero-mobile">
+            <img src="./files/images/hero/img-background-hero-mobile.png" alt="Imagem para mobile">
+        </div>
+
     </section>
 
     <section class="destaques" id="destaques">
