Continuação de correções mobile

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <img src="./files/images/hero/img-background-hero.png"
                 alt="Imagem de um rolo pintando parede com tinta amarela">
         </div>
-        <div class="img-background-hero-mobile">
-            <img src="./files/images/hero/img-background-hero-mobile.png" alt="Imagem para mobile">
+        <div class="background-hero-mobile">
+            <img src="./files/images/hero/background-mobile-hero.png" alt="Imagem para mobile">
         </div>
 
     </section>
