Continuação de ajustes de media queries

--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
                 </div>
             </div>
         </div>
-        <div class="linha"></div>
+        <div class="linha-servico">
+            <img src="./files/images/servicos/linha-servicos.png" alt="Linha divisão de seção">
+        </div>
     </section>
 
     <section class="como-trabalhamos" id="como-trabalhamos">
@@ -233,7 +235,7 @@
                     </div>
                     <div class="textos-caixa-um">
                         <h4>Qualidade garantida</h4>
-                        <p>Tintas e materiais de alta durabilidade, com acabamento profissional impecável.</p>
+                        <p>Tintas e materiais de alta durabilidade, com acabamento profissional impecável e resistência superior.</p>
                     </div>
                 </div>
                 <div class="caixa-dois">
@@ -242,7 +244,7 @@
                     </div>
                     <div class="textos-caixa-dois">
                         <h4>Ambiente limpo e protegido</h4>
-                        <p>Protegemos pisos, móveis e paredes. Ao final, deixamos tudo limpo e pronto para uso.</p>
+                        <p>Protegemos pisos, móveis e paredes. Ao final, deixamos tudo limpo, organizado e pronto para uso imediato.</p>
                     </div>
                 </div>
                 <div class="caixa-tres">
@@ -251,7 +253,7 @@
                     </div>
                     <div class="textos-caixa-tres">
                         <h4>Pontualidade no prazo</h4>
-                        <p>Executamos os serviços no tempo combinado, com organização e responsabilidade.</p>
+                        <p>Executamos os serviços no tempo combinado, com organização, responsabilidade, qualidade e compromisso.</p>
                     </div>
                 </div>
                 <div class="caixa-quatro">
@@ -260,7 +262,7 @@
                     </div>
                     <div class="textos-caixa-quatro">
                         <h4>Experiência de mais de 15 anos </h4>
-                        <p>Reconhecimento em Pedrinhas Paulista e região pela qualidade e confiança construída.</p>
+                        <p>Reconhecimento em Pedrinhas Paulista e região pela qualidade, confiança, dedicação e experiência construída.</p>
                     </div>
                 </div>
                 <div class="caixa-cinco">
@@ -379,11 +381,14 @@
                 </p>
                 <p class="texto-tres">
                     Conte com uma equipe <span class="texto-destaque">profissional</span>,
-                    <span class="texto-destaque">dedicada</span> e
+                    <span class="texto-destaque">dedicada</span>,
+                    <span class="texto-destaque">experiente</span>,
+                    <span class="texto-destaque">qualificada</span> e
                     <span class="texto-destaque">apaixonada</span> pelo que faz.
                     Nosso objetivo é entregar muito mais do que um serviço — é
                     <span class="texto-destaque">transformar ambientes</span> com
-                    <span class="texto-destaque">responsabilidade</span> e
+                    <span class="texto-destaque">responsabilidade</span>,
+                    <span class="texto-destaque">cuidado</span> e
                     <span class="texto-destaque">excelência</span>.
                 </p>
             </div>
@@ -420,7 +425,7 @@
                 </div>
                 <h4>Juliana Mendes</h4>
                 <img src="./files/images/depoimentos/cinco-estrelas.svg" alt="Estrelas de avaliação" class="estrelas">
-                <p>“Minha loja ficou completamente renovada! A equipe é muito organizada, pontual e o serviço foi
+                <p>“Minha loja ficou perfeita, e completamente renovada! A equipe é muito organizada, pontual e o serviço foi
                     entregue até antes do prazo.”</p>
             </div>
             <div class="quadro">
@@ -487,7 +492,12 @@
                     muito bem feito e com garantia.”</p>
             </div>
         </div>
+        <div class="linha-depoimentos">
+            <img src="./files/images/depoimentos/linha-depoimentos.png" alt="Linha divisão de seção">
+        </div>
     </section>
+
+    section.
 
     <script src="./assets/js/global.js"></script>
     <script src="./assets/js/contador-hero.js"></script>
